testdata/Call.##/Call.##.3.1-migr.check
// hasErrors: true
-- [E050] Type Error: target/testdata/Call.##.scala:8:6 ------------------------
8 |  any.##()
  |  ^^^^^^
  |  method ## in class Any does not take parameters

Explanation
===========
You have specified more parameter lists as defined in the method definition(s).
Nullary methods may not be called with parenthesis

-- [E050] Type Error: target/testdata/Call.##.scala:11:6 -----------------------
11 |  ref.##()
   |  ^^^^^^
   |  method ## in class Any does not take parameters

Explanation
===========
You have specified more parameter lists as defined in the method definition(s).
Nullary methods may not be called with parenthesis

-- [E050] Type Error: target/testdata/Call.##.scala:14:6 -----------------------
14 |  obj.##()
   |  ^^^^^^
   |  method ## in class Any does not take parameters

Explanation
===========
You have specified more parameter lists as defined in the method definition(s).
Nullary methods may not be called with parenthesis

-- [E050] Type Error: target/testdata/Call.##.scala:17:6 -----------------------
17 |  str.##()
   |  ^^^^^^
   |  method ## in class Any does not take parameters

Explanation
===========
You have specified more parameter lists as defined in the method definition(s).
Nullary methods may not be called with parenthesis

4 errors found
